--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "copod",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www.copod.theajstars.com",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.0",
